fix(.more-home .btn): button width on mobile

--- a/web/app/themes/grillinfools-theme/assets/less/layouts/_posts.less
+++ b/web/app/themes/grillinfools-theme/assets/less/layouts/_posts.less
@@ -182,7 +182,11 @@
 	//a:hover {text-decoration: underline !important;} //ugh, plugin overwriting. :(
 
 }
-
+.more-home {
+	.btn {
+		white-space: normal;
+	}
+}
 // Stupid OOYALA video player stuff
 .ooyala-container {
 	position: relative;
